delivery/chart/templates/route-sx-podtato-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: sx-podtato-route
  namespace: sx-podtato
  uid: cf062e10-2f53-4e4e-8792-53fda8bbea74
  resourceVersion: '306082684'
  creationTimestamp: '2023-03-01T14:58:41Z'
  labels:
    app.kubernetes.io/component: podtato-head-entry
    app.kubernetes.io/instance: podtato-head
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/version: 0.2.7
    helm.sh/chart: podtato-head-0.2.7
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-03-01T14:58:41Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/managed-by': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/version': {}
            'f:helm.sh/chart': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:termination': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-03-01T14:58:41Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
spec:
  host: sx-podtato-route-sx-podtato.apps.cluster1.mcp.pitagora.at
  to:
    kind: Service
    name: podtato-head-entry
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
status:
  ingress:
    - host: sx-podtato-route-sx-podtato.apps.cluster1.mcp.pitagora.at
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2023-03-01T14:58:41Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.cluster1.mcp.pitagora.at
